
syntax = "proto3";

package subs;

option go_package = "github.com/codeandcodes/subs/protos";

enum DayOfWeek {
    SUNDAY = 0;
    MONDAY = 1;
    TUESDAY = 2;
    WEDNESDAY = 3;
    THURSDAY = 4;
    FRIDAY = 5;
    SATURDAY = 6;
}
  
// User
// User can either be pulled from the database
// Or if only an email address is available, uses that instead
// Preference should be:
// 1) ID (stored user in DB, has an account with onlysubs)
// 2) email address
// 3) Phone number or other contact methods (e.g. in the future)
message User {
    string id = 1;
    string email_address = 2;
    string given_name = 3;
}

// Adapted from Google schedule
message SubscriptionFrequency {
    enum FrequencyType {
      DAILY = 0;
      WEEKLY = 1;
      MONTHLY = 2;
      YEARLY = 3;
    }
  
    FrequencyType type = 1;
  
    // The interval at which the event recurs. 
    // For example, if type is WEEKLY and interval is 2, the event occurs every 2 weeks.
    int32 interval = 2; 
  
    // The date of the first occurrence
    string start_date = 3;
  
    // An optional end date for the recurrence
    string end_date = 4;
  
    // An optional maximum number of occurrences. 
    // If this field is set, the event will stop recurring after this many occurrences.
    int32 max_occurrences = 5;
  
    // If the type is MONTHLY or YEARLY, 
    // this could represent the day of the month that the event should occur
    int32 day_of_month = 6; 
  
    // If the type is WEEKLY, 
    // this could represent the days of the week that the event should occur.
    repeated DayOfWeek days_of_week = 7; 
  
    // If true, the event recurs indefinitely.
    bool is_ongoing = 8;
  }