syntax = "proto3";

package subs;

import "google/protobuf/timestamp.proto";
import "common.proto";

option go_package = "github.com/codeandcodes/subs/protos";

/*
* Basic flow is:
* 1) Select the payers (I am the payee)
* 2) Select the frequency
* 3) This creates the Subscription object on the backend
* 4) For each payer, I create a SubscriptionEventRequest
* 5) For each payer, they respond with a SubscriptionEventResponse
*/
message Subscription {
  string id = 1;
  string plan_id = 2;
  string customer_id = 3;
  string start_date = 4;
  string charged_through_date = 5;
  string status = 6;
  repeated string invoice_ids = 7;
  string created_at = 8;
  string location_id = 9;
}

/*
* SubscriptionRequest and SubscriptionResponse are 1:1 with subscription and user
*/
message SubscriptionEventRequest {
  string id = 1;
  string subscription_id = 2;
  subs.User payer = 3;
  subs.User payee = 4;
  google.protobuf.Timestamp create_time = 5;
  google.protobuf.Timestamp update_time = 6;
}

message SubscriptionEventResponse {
  string id = 1;
  string subscription_id = 2;
  subs.User payer = 3;
  subs.User payee = 4;
  
  enum SubscriptionEventResponseType {
    ACCEPT = 0;
    REJECT = 1;
  }
  SubscriptionEventResponseType response = 5;

  string description = 6;
  google.protobuf.Timestamp create_time = 7;
  google.protobuf.Timestamp update_time = 8;
}